--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,9 @@ classifiers=
     Operating System :: Windows/Linux/MAC
 
 [options]
-package_dir="src"
+package_dir=
+    = src
 packages="find:"
 python_requires=">=3.6"
 [options.packages.find]
-where="src"
+where=src
