--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,20 @@
 [metadata]
-name="ret-tools"
-version="1.0.0"
+name=ret-tools
+version=1.0.3
 author="Dylan Riley"
-author_email="rileydylan581@gmail.com"
-description="Easy-to-use tools for handling function responses, handling exceptions, and creating asynchronous tasks."
-long_description="file: README.md"
-long_description_content_type="text/markdown"
-url="https://github.com/rileydylan581/ret-tools"
+author_email=rileydylan581@gmail.com
+description=Easy-to-use tools for handling function responses, handling exceptions, and creating asynchronous tasks.
+long_description=file: README.md
+long_description_content_type=text/markdown
+url=https://github.com/rileydylan581/ret-tools
 classifiers=
     Programming Language :: Python :: 3
-    License :: OSI Approved :: GPL License
-    Operating System :: Windows/Linux/MAC
+    Operating System :: OS Independent
 
 [options]
 package_dir=
     = src
-packages="find:"
-python_requires=">=3.6"
+packages=find:
+python_requires = >=3.6
 [options.packages.find]
 where=src
